--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/reportes-estandar/reportes-estandar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/reportes-estandar/reportes-estandar.component.html
@@ -125,8 +125,10 @@
             </mat-card-content>
         </mat-card>
         <div style="margin-top: 1.5em;" class="text-center">
-            <button mat-raised-button color="accent" [disabled]="!addressForm.valid"
-                type="submit">Descargar reporte</button>
+            <button mat-raised-button color="accent" 
+            [disabled]="(addressForm.get('etapa').value == null && addressForm.get('procesoAcuerdo').value == null && addressForm.get('reporte').value == null)
+            ||(addressForm.get('etapa').value == null && addressForm.get('procesoAcuerdo').value == null && addressForm.get('departamento').value == null && addressForm.get('municipio').value == null)"
+             type="submit">Descargar reporte</button>
         </div>
     </form>
 </section>
