--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/mapa-interactivo/mapa-interactivo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/mapa-interactivo/mapa-interactivo.component.html
@@ -7,7 +7,7 @@
     <div class="text-center mt-1em">
         <form [formGroup]="addressForm">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-9 mx-auto">
                     <div class="row">
                         <div class="pr-1">
                             <label class="label-left" for="quieroVer"
